--- a/client/src/styles/css/main.css
+++ b/client/src/styles/css/main.css
@@ -3,6 +3,7 @@ body {
   font-size: 16px;
   color: #323232;
   line-height: 1.6875;
+  background: #E2CEBC;
 }
 
 * {
@@ -47,6 +48,7 @@ img {
   height: 90px;
   padding: 25px 120px;
   background-color: #EDE3DA;
+  box-shadow: 0px 1.993px 1.24px 0px rgba(0, 0, 0, 0.02), 0px 4.529px 3.066px 0px rgba(0, 0, 0, 0.02), 0px 7.882px 5.729px 0px rgba(0, 0, 0, 0.03), 0px 12.522px 9.639px 0px rgba(0, 0, 0, 0.04), 0px 19.32px 15.522px 0px rgba(0, 0, 0, 0.04), 0px 30.147px 24.835px 0px rgba(0, 0, 0, 0.05), 0px 50.049px 41.234px 0px rgba(0, 0, 0, 0.05), 0px 100px 80px 0px rgba(0, 0, 0, 0.07);
 }
 
 .navbar__wrapper {
@@ -66,13 +68,69 @@ img {
   gap: 12px;
 }
 
-button {
+.navbar__button {
   font-size: 20px;
   padding: 8px 12px;
   text-transform: capitalize;
   border-radius: 4px;
   transition: 0.3s;
 }
-button:hover {
+.navbar__button:hover {
   background-color: #E2CEBC;
+}
+
+.auth {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 90px);
+}
+
+.auth__wrapper {
+  width: 480px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #FFFEFE;
+  border-radius: 10px;
+}
+
+.auth__title {
+  font-size: 36px;
+}
+
+.auth__text {
+  margin-bottom: 25px;
+}
+
+.auth__link {
+  text-decoration: underline;
+  color: #089FE0;
+}
+
+.auth__input, .auth__button {
+  width: 400px;
+  height: 44px;
+  border-radius: 5px;
+  background: #F5F5F5;
+  text-transform: capitalize;
+  font-style: italic;
+  padding: 9px 11px;
+}
+
+.auth__button {
+  font-style: normal;
+  color: #F5F5F5;
+  background: #089FE0;
+}
+
+.auth__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 60px;
 }/*# sourceMappingURL=main.css.map */
