--- a/client/src/styles/css/main.css
+++ b/client/src/styles/css/main.css
@@ -102,7 +102,7 @@ img {
 }
 
 .auth__text {
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .auth__link {
@@ -133,4 +133,56 @@ img {
   align-items: center;
   gap: 20px;
   margin-bottom: 60px;
+}
+
+.shop {
+  height: calc(100vh - 90px);
+  padding-top: 20px;
+}
+
+.shop__filter {
+  width: 27%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.bar {
+  margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 12px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2.767px 2.214px 0px rgba(0, 0, 0, 0.02), 0px 6.65px 5.32px 0px rgba(0, 0, 0, 0.03), 0px 12.522px 10.017px 0px rgba(0, 0, 0, 0.04), 0px 22.336px 17.869px 0px rgba(0, 0, 0, 0.04), 0px 41.778px 33.422px 0px rgba(0, 0, 0, 0.05), 0px 100px 80px 0px rgba(0, 0, 0, 0.07);
+}
+
+.bar__list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  padding: 8px;
+}
+
+.bar__element {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 12px;
+  font-size: 20px;
+  border-radius: 8px;
+  background: #F6F6F6;
+  transition: 0.3s;
+  text-transform: capitalize;
+}
+.bar__element-active {
+  background: #E7BCDE;
+}
+.bar__element:hover {
+  background: #FFC5C5;
 }/*# sourceMappingURL=main.css.map */
