--- a/client/src/styles/scss/base/_base.scss
+++ b/client/src/styles/scss/base/_base.scss
@@ -1,7 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;  
     font-size: 16px;
-    color: #323232;
+    color: $font-color;
     line-height: 1.6875;
-    background: #E2CEBC;
+    background: $body-color;
 }
