--- a/client/src/styles/scss/main.scss
+++ b/client/src/styles/scss/main.scss
@@ -1,7 +1,11 @@
 // Base
+@import './base/vars';
 @import './base/base';
 @import './base/reset';
 
 // Blocks
 @import './blocks/navbar';
 @import './blocks/auth';
+@import './blocks/shop';
+@import './blocks/bar';
+
