--- a/client/src/styles/scss/base/_vars.scss
+++ b/client/src/styles/scss/base/_vars.scss
@@ -4,5 +4,6 @@ $body-color: #E2CEBC;
 $font-color: #323232;
 $body-light-color: #EDE3DA;
 $form-color: #FFFEFE;
-$input-color: #F5F5F5;
-$link-color: #089FE0;
+$input-color: #F6F6F6;
+$link-color: #5FBDFF;
+$dark-link-color: #7B66FF;
