--- a/client/src/styles/css/main.css
+++ b/client/src/styles/css/main.css
@@ -136,16 +136,30 @@ img {
 }
 
 .shop {
-  height: calc(100vh - 90px);
   padding-top: 20px;
+  display: flex;
 }
 
 .shop__filter {
-  width: 27%;
+  width: 25%;
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-bottom: 20px;
+}
+
+.shop__catalog {
+  background-color: #fff;
+  border-radius: 12px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 2.767px 2.214px 0px rgba(0, 0, 0, 0.02), 0px 6.65px 5.32px 0px rgba(0, 0, 0, 0.03), 0px 12.522px 10.017px 0px rgba(0, 0, 0, 0.04), 0px 22.336px 17.869px 0px rgba(0, 0, 0, 0.04), 0px 41.778px 33.422px 0px rgba(0, 0, 0, 0.05), 0px 100px 80px 0px rgba(0, 0, 0, 0.07);
+  width: 75%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
 }
 
 .bar {
@@ -181,8 +195,65 @@ img {
   text-transform: capitalize;
 }
 .bar__element-active {
-  background: #E7BCDE;
+  background: #FFC5C5;
 }
 .bar__element:hover {
-  background: #FFC5C5;
+  background: #E7BCDE;
+}
+
+.item {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  padding: 12px 6px;
+  background: #F6F6F6;
+  border-radius: 12px;
+  border: 1px solid #EDE3DA;
+  transition: 0.2s;
+}
+.item:hover {
+  background: #31304D;
+  color: #F6F6F6;
+  border: 1px solid #323232;
+}
+
+.item__image {
+  width: 170px;
+  height: 230px;
+  margin: 0 auto;
+  border-radius: 6px;
+  border: 1px solid #F6F6F6;
+}
+
+.item__title {
+  font-size: 18px;
+  margin-bottom: 5px;
+  line-height: 30px;
+}
+
+.item__description {
+  margin-top: 10px;
+  margin-left: 35px;
+  line-height: 18px;
+}
+
+.item__price {
+  margin: 10px 0;
+  font-size: 18px;
+  font-style: italic;
+  font-weight: 600;
+}
+
+.item__button {
+  margin: 0 auto;
+  font-weight: 600;
+  width: 170px;
+  padding: 8px 14px;
+  background-color: #5FBDFF;
+  border-radius: 4px;
+  transition: 0.2s;
+}
+.item__button:hover {
+  background-color: #7B66FF;
+  color: #FFFEFE;
 }/*# sourceMappingURL=main.css.map */
