--- a/client/src/styles/scss/base/_vars.scss
+++ b/client/src/styles/scss/base/_vars.scss
@@ -7,3 +7,5 @@ $form-color: #FFFEFE;
 $input-color: #F6F6F6;
 $link-color: #5FBDFF;
 $dark-link-color: #7B66FF;
+$purple-soft-color: #DCBFFF;
+$purple-gloomy-color: #D0A2F7;
