--- a/client/src/styles/scss/blocks/_shop.scss
+++ b/client/src/styles/scss/blocks/_shop.scss
@@ -12,7 +12,7 @@
 }
 
 .shop__catalog {
-    background-color: #fff;
+    background-color: $form-color;
     border-radius: 12px;
     border: 1px solid rgba(0, 0, 0, 0.10);
     padding: 20px;
