--- a/client/src/styles/scss/main.scss
+++ b/client/src/styles/scss/main.scss
@@ -9,3 +9,6 @@
 @import './blocks/shop';
 @import './blocks/bar';
 @import './blocks/item';
+@import './blocks/dvd';
+@import './blocks/admin';
+@import './blocks/modal';
